# cln-grpc-test

./: .env  Cargo.toml  README.md
src/: cln.rs  main.rs  utils.rs
